--- a/tjif/web/static/css/tjif.css
+++ b/tjif/web/static/css/tjif.css
@@ -1,2 +1,3 @@
 #mainnav { background: #333; }
-#base-container { margin-top: 100px; }
+#base-container { margin-top: 120px; }
+.jam-container {padding:10px; border-bottom:solid thin #CCC;}
