--- a/tjif/web/templates/add-jam.html
+++ b/tjif/web/templates/add-jam.html
@@ -1,13 +1,19 @@
 {% extends "basepage.html" %}
+{% load bootstrap %}
 
 
 {% block content %}
-<h1>New jam! yeah!</h1>
+<div class="container">
+  <h1>Got a new jam?</h1>
+  <hr />
 
-<form method="POST" action="{% url 'web:add_jam' %}">
-  {% csrf_token %}
-  {{ form }}
-  <input type="submit" value="Lets Go" />
-</form>
-
+  <form role="form" action="{% url 'web:add_jam' %}" method="POST">
+    <legend>Please enter a valid Soundcloud URL</legend>
+    {% csrf_token %}
+    {{ form|bootstrap }}
+    <div class="form-group">
+      <button type="submit" class="btn btn-primary">HERE WE GO</button>
+    </div>
+    </form>
+</div>
 {% endblock %}
