--- a/tjif/web/templates/jam.html
+++ b/tjif/web/templates/jam.html
@@ -3,6 +3,6 @@
 {% block content %}
 <div class="container">
   <h1>{{jam.user.username}}'s new jam</h1>
-  <iframe width="100%" height="600" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/259277464&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+  <iframe width="100%" height="600" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url={{jam.track_url}}&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
 </div>
 {% endblock %}
